--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <button
         class="bg-transparent hover:bg-black text-black font-semibold hover:text-white py-2 px-4 border border-black hover:border-transparent">About ME</button>
     </div>
-    <div class="w-full lg:w-1/2 lg:py-6"><img src="./images/img1.JPG" alt="image"
+    <div class="w-full lg:w-1/2 lg:py-6"><img src="https://yasu-kun.github.io/images/img1.JPG" alt="image"
         class="w-full"></div>
   </div>
 </section><section class="my-8 font-sans container m-auto max-w-xl ">
