--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href=https://stitches.hyperyolo.com/output.css rel="stylesheet">
     <link rel="stylesheet" href=https://use.fontawesome.com/releases/v5.6.3/css/all.css integrity=sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/ crossorigin="anonymous">
-    <link rel="icon" href="./images/icon.png">
+    <link rel="icon" href="./images/favicon.ico">
     <title>yasuhiro</title>
   </head>
   <body><nav class="font-sans bg-white text-center flex justify-between my-4 mx-auto container overflow-hidden">
