--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       </div>
     </div>
   </div>
-  <div class="pt-4 mt-4 text-gray-700 text-xs border-t border-gray-300 text-center"> ©2019 Hyperyolo. All rights
+  <div class="pt-4 mt-4 text-gray-700 text-xs border-t border-gray-300 text-center"> ©2019 yasuhiro. All rights
     reserved.</div>
 </footer></body>
 </html>
