--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="flex flex-col w-full lg:w-1/2 justify-center items-start py-8">
       <label for="tagline" class="uppercase tracking-loose">Yasuhiro</label>
       <h1 class="my-4 font-normal">Software Engineer Blog</h1>
-      <p class="leading-normal mb-4">機械学習やってます。Qiitaでもぼちぼちと出現します。</p>
+      <p class="leading-normal mb-4">機械学習をやってます。Qiitaでもぼちぼちと出現します。</p>
       <button
         class="bg-transparent hover:bg-black text-black font-semibold hover:text-white py-2 px-4 border border-black hover:border-transparent">About ME</button>
     </div>
