--- a/index.html
+++ b/index.html
@@ -40,32 +40,80 @@
   </div>
   <div class="flex flex-col sm:flex-row flex-wrap my-8">
     <div class="w-full sm:w-1/2 md:w-1/3 flex flex-col items-center justify-center h-48 md:h-64 border-gray-300 border-r border-b hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal hover:show-child">
-      <div class="w-12 h-12 rounded-full bg-gray-300" alt=""></div>
+      <!--<div class="w-12 h-12 rounded-full bg-gray-300" alt=""></div>-->
+      <div style="background-image:url('./images/ml.jpg');
+        display: block;
+        width: 130px;
+        height: 130px;
+        background-position: top center;
+        background-size: cover;
+        border-radius: 50%;" ></div>
+
       <h3 class="mt-4 mb-1">機械学習</h3>
       <p class="mt-4 text-center text-gray-700 leading-normal px-6 hidden hover:block">本業の機械学習で、私なりに面白かったことを記事にしています。</p>
     </div>
     <div class="w-full sm:w-1/2 md:w-1/3 flex flex-col items-center justify-center h-48 md:h-64 p-8  border-gray-300 border-r border-b hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal hover:show-child">
-      <div class="w-12 h-12 rounded-full bg-gray-300" alt=""></div>
+      <!--<div class="w-12 h-12 rounded-full bg-gray-300" alt=""></div>-->
+      <div style="background-image:url('./images/py.png');
+        display: block;
+        width: 130px;
+        height: 130px;
+        background-position: top center;
+        background-size: cover;
+        border-radius: 50%;" ></div>
+
       <h3 class="mt-4 mb-1">プログラミング系</h3>
       <p class="mt-4 text-center text-gray-700 leading-normal hidden hover:block">PythonやC,GitHub関連のネタを記事にしています。（備忘録でもあります）</p>
     </div>
     <div class="w-full sm:w-1/2 md:w-1/3 flex flex-col items-center justify-center h-48 md:h-64 p-8  border-gray-300 border-b hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal hover:show-child">
-      <div class="w-12 h-12 rounded-full bg-gray-300" alt=""></div>
+      <!--<div class="w-12 h-12 rounded-full bg-gray-300" alt=""></div>-->
+      <div style="background-image:url('./images/server.HEIC');
+        display: block;
+        width: 130px;
+        height: 130px;
+        background-position: top center;
+        background-size: cover;
+        border-radius: 50%;" ></div>
+
       <h3 class="mt-4 mb-1">サーバー関連</h3>
       <p class="mt-4 text-center text-gray-700 leading-normal hidden hover:block">自作PC（計算機サーバ）関連を記事にしています。<br>計算機科学のお仕事もしています。</p>
     </div>
     <div class="w-full sm:w-1/2 md:w-1/3 flex flex-col items-center justify-center h-48 md:h-64 p-8  border-gray-300 border-r hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal hover:show-child">
-      <div class="w-12 h-12 rounded-full bg-gray-300" alt=""></div>
+      <!--<div class="w-12 h-12 rounded-full bg-gray-300" alt=""></div>-->
+      <div style="background-image:url('./images/iot.jpg');
+        display: block;
+        width: 130px;
+        height: 130px;
+        background-position: top center;
+        background-size: cover;
+        border-radius: 50%;" ></div>
+
       <h3 class="mt-4 mb-1">IoT系</h3>
       <p class="mt-4 text-center text-gray-700 leading-normal hidden hover:block">Raspberry PiやLPWA関連の記事を趣味レベルで書いてます。</p>
     </div>
     <div class="w-full sm:w-1/2 md:w-1/3 flex flex-col items-center justify-center h-48 md:h-64 p-8  border-gray-300 border-r hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal hover:show-child">
-      <div class="w-12 h-12 rounded-full bg-gray-300" alt=""></div>
+      <!--<div class="w-12 h-12 rounded-full bg-gray-300" alt=""></div>-->
+      <div style="background-image:url('./images/img1.jpg');
+        display: block;
+        width: 130px;
+        height: 130px;
+        background-position: top center;
+        background-size: cover;
+        border-radius: 50%;" ></div>
+
       <h3 class="mt-4 mb-1">趣味全般</h3>
       <p class="mt-4 text-center text-gray-700 leading-normal hidden hover:block">機械学習も趣味ですが、、、<br>旅行なども趣味なので随時更新していければなぁ。。。</p>
     </div>
     <div class="w-full sm:w-1/2 md:w-1/3 flex flex-col items-center justify-center h-48 md:h-64 p-8 border-gray-300  hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal hover:show-child">
-      <div class="w-12 h-12 rounded-full bg-gray-300" alt=""></div>
+      <!--<div class="w-12 h-12 rounded-full bg-gray-300" alt=""></div>-->
+      <div style="background-image:url('./images/pic.HEIC');
+        display: block;
+        width: 130px;
+        height: 130px;
+        background-position: top center;
+        background-size: cover;
+        border-radius: 50%;" ></div>
+
       <h3 class="mt-4 mb-1">写真</h3>
       <p class="mt-4 text-center text-gray-700 leading-normal hidden hover:block">詳しくはインスタグラムを見てもらえれば嬉しいですが、気に入った写真などはこちらにもアップしていこうと思います。</p>
     </div>
