--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </div>
     <div class="w-full sm:w-1/2 md:w-1/3 flex flex-col items-center justify-center h-48 md:h-64 border-gray-300 border-r hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal hover:show-child">
       <!--<div class="w-12 h-12 rounded-full bg-gray-300" alt=""></div>-->
-      <div style="background-image:url('./images/img1.jpg');
+      <div style="background-image:url('./images/img1.JPG');
         display: block;
         width: 130px;
         height: 130px;
