--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
   </div>
 </section><section class="my-8 font-sans container m-auto max-w-xl ">
   <div class="text-center">
-    <h1 class="my-4 font-medium">BLOGネタ</h1>
-    <p class="leading-normal mb-4 max-w-sm m-auto">気ままにBLOGを書いています。備忘録であったり。<br>完全ブログも趣味です。</p>
+    <h1 class="my-4 font-medium">BLOG Category</h1>
+    <p class="leading-normal mb-4 max-w-sm m-auto">my blog Category</p>
   </div>
   <div class="flex flex-col sm:flex-row flex-wrap my-8">
     <div class="w-full sm:w-1/2 md:w-1/3 flex flex-col items-center justify-center h-48 md:h-64 border-gray-300 border-r border-b hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal hover:show-child">
@@ -50,8 +50,8 @@
         border-radius: 50%;
         background-position: center;" ></div>
 
-      <h3 class="mt-4 mb-1">機械学習</h3>
-      <p class="text-center text-gray-700 leading-normal px-6 hidden hover:block">本業の機械学習で、私なりに面白かったことを記事にしています。</p>
+      <h3 class="mt-4 mb-1">Machine Learning</h3>
+      <p class="text-center text-gray-700 leading-normal px-6 hidden hover:block">This is a summary of the machine learning reminder I learned in my research.</p>
     </div>
     <div class="w-full sm:w-1/2 md:w-1/3 flex flex-col items-center justify-center h-48 md:h-64 border-gray-300 border-r border-b hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal hover:show-child">
       <!--<div class="w-12 h-12 rounded-full bg-gray-300" alt=""></div>-->
@@ -64,8 +64,8 @@
         border-radius: 50%;
         background-position: center;" ></div>
 
-      <h3 class="mt-4 mb-1">プログラミング系</h3>
-      <p class="text-center text-gray-700 leading-normal hidden hover:block">PythonやC,GitHub関連のネタを記事にしています。（備忘録でもあります）</p>
+      <h3 class="mt-4 mb-1">Programming</h3>
+      <p class="text-center text-gray-700 leading-normal hidden hover:block">I write about programming education and other topics.</p>
     </div>
     <div class="w-full sm:w-1/2 md:w-1/3 flex flex-col items-center justify-center h-48 md:h-64 border-gray-300 border-b hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal hover:show-child">
       <!--<div class="w-12 h-12 rounded-full bg-gray-300" alt=""></div>-->
@@ -78,8 +78,8 @@
         border-radius: 50%;
         background-position: center;" ></div>
 
-      <h3 class="mt-4 mb-1">サーバー関連</h3>
-      <p class="text-center text-gray-700 leading-normal hidden hover:block">自作PC（計算機サーバ）関連を記事にしています。<br>計算機科学のお仕事もしています。</p>
+      <h3 class="mt-4 mb-1">Server</h3>
+      <p class="text-center text-gray-700 leading-normal hidden hover:block">The article is about servers and calculators.</p>
     </div>
     <div class="w-full sm:w-1/2 md:w-1/3 flex flex-col items-center justify-center h-48 md:h-64 border-gray-300 border-r hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal hover:show-child">
       <!--<div class="w-12 h-12 rounded-full bg-gray-300" alt=""></div>-->
@@ -92,8 +92,8 @@
         border-radius: 50%;
         background-position: center;" ></div>
 
-      <h3 class="mt-4 mb-1">IoT系</h3>
-      <p class="text-center text-gray-700 leading-normal hidden hover:block">Raspberry PiやLPWA関連の記事を趣味レベルで書いてます。</p>
+      <h3 class="mt-4 mb-1">IoT</h3>
+      <p class="text-center text-gray-700 leading-normal hidden hover:block">I'm interested in edge computing and IoT using Raspberry pi and Jetson nano.</p>
     </div>
     <div class="w-full sm:w-1/2 md:w-1/3 flex flex-col items-center justify-center h-48 md:h-64 border-gray-300 border-r hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal hover:show-child">
       <!--<div class="w-12 h-12 rounded-full bg-gray-300" alt=""></div>-->
@@ -107,7 +107,7 @@
         background-position: center;" ></div>
 
       <h3 class="mt-4 mb-1">趣味全般</h3>
-      <p class="text-center text-gray-700 leading-normal hidden hover:block">機械学習も趣味ですが、、、<br>旅行なども趣味なので随時更新していければなぁ。。。</p>
+      <p class="text-center text-gray-700 leading-normal hidden hover:block">Write down your hobbies and thoughts.</p>
     </div>
     <div class="w-full sm:w-1/2 md:w-1/3 flex flex-col items-center justify-center h-48 md:h-64 border-gray-300  hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal hover:show-child">
       <!--<div class="w-12 h-12 rounded-full bg-gray-300" alt=""></div>-->
@@ -120,8 +120,8 @@
         border-radius: 50%;
         background-position: center;" ></div>
 
-      <h3 class="mt-4 mb-1">写真</h3>
-      <p class="text-center text-gray-700 leading-normal hidden hover:block">詳しくはインスタグラムを見てもらえれば嬉しいですが、気に入った写真などはこちらにもアップしていこうと思います。</p>
+      <h3 class="mt-4 mb-1">Picture</h3>
+      <p class="text-center text-gray-700 leading-normal hidden hover:block">I'll post some beautiful pictures.</p>
     </div>
   </div>
 </section><footer class="font-sans bg-white py-8 px-4">
@@ -147,7 +147,7 @@
       </div>
     </div>
   </div>
-  <div class="pt-4 mt-4 text-gray-700 text-xs border-t border-gray-300 text-center"> ©2019 yasuhiro. All rights
+  <div class="pt-4 mt-4 text-gray-700 text-xs border-t border-gray-300 text-center"> ©2020 yasuhiro. All rights
     reserved.</div>
 </footer></body>
 </html>
