--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   <div class="container m-auto flex flex-col md:flex-row max-w-xl">
     <div class="flex flex-col w-full lg:w-1/2 justify-center items-start py-8">
       <label for="tagline" class="uppercase tracking-loose">Yasuhiro</label>
-      <h1 class="my-4 font-normal">Software Engineer Blog</h1>
-      <p class="leading-normal mb-4">機械学習をやってます。Qiitaでもぼちぼちと出現します。<br>まだサイト構築中です。今週末にはblog始めれるようにします。</p>
+      <h1 class="my-4 font-normal">My Engineer Blog</h1>
+      <p class="leading-normal mb-4">test</p>
       <button
         class="bg-transparent hover:bg-black text-black font-semibold hover:text-white py-2 px-4 border border-black hover:border-transparent">About ME</button>
     </div>
@@ -106,7 +106,7 @@
         border-radius: 50%;
         background-position: center;" ></div>
 
-      <h3 class="mt-4 mb-1">趣味全般</h3>
+      <h3 class="mt-4 mb-1">Hobby</h3>
       <p class="text-center text-gray-700 leading-normal hidden hover:block">Write down your hobbies and thoughts.</p>
     </div>
     <div class="w-full sm:w-1/2 md:w-1/3 flex flex-col items-center justify-center h-48 md:h-64 border-gray-300  hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal hover:show-child">
@@ -144,6 +144,8 @@
             class="fab fa-instagram"></i></a>
         <a class="block flex items-center text-gray-900 hover:text-black no-underline" href="https://twitter.com/go_new_innov"><i
             class="fab fa-twitter"></i></a>
+        <a class="block flex items-center text-gray-900 hover:text-black no-underline" href="https://yasu-kun-ana.hatenablog.com/">
+            <i class="fas fa-pen-nib"></i></a>
       </div>
     </div>
   </div>
