--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <ul class="text-sm text-gray-700 list-none p-0 flex items-center">
     <li><a href="#" class="inline-block py-2 px-3 text-gray-900 hover:text-gray-700 no-underline">HOME</a></li>
     <li><a href="#" class="inline-block py-2 px-3 text-gray-900 hover:text-gray-700 no-underline">About Me</a></li>
+    <li><a href="#" class="inline-block py-2 px-3 text-gray-900 hover:text-gray-700 no-underline">pub</a></li>
     <li class="pr-2"><a href="#"
         class="inline-block py-2 px-3 text-gray-900 hover:text-gray-700 no-underline">Contact</a></li>
     <li class="pl-2 border-l"><a href="#" class="inline-block py-2 px-3 text-gray-900 hover:text-gray-700 no-underline">ENGLISH</a></li>
@@ -132,8 +133,7 @@
     </a>
     <div class="w-full text-gray-900 mt-6 md:mt-0 leading-normal">
       <h4 class="py-2 uppercase font-bold tracking-wide">About ME</h4>
-      <p>技術系の話題をBLOGにしています。趣味や写真なども載せています。
-      日頃は、機械学習エンジニアしてます。</p>
+      <p>About this pages.</p>
     </div>
     <div class="text-gray-700 flex flex-col items-center w-full md:w-1/4 mt-6 md:mt-0">
       <h4 class="inline-block py-2 px-3 uppercase font-bold tracking-wide text-gray-900">Follow ME</h4>
