--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <ul class="text-sm text-gray-700 list-none p-0 flex items-center">
     <li><a href="#" class="inline-block py-2 px-3 text-gray-900 hover:text-gray-700 no-underline">HOME</a></li>
     <li><a href="#" class="inline-block py-2 px-3 text-gray-900 hover:text-gray-700 no-underline">About Me</a></li>
-    <li><a href="#" class="inline-block py-2 px-3 text-gray-900 hover:text-gray-700 no-underline">Publications</a></li>
+    <li><a href="publications.html" class="inline-block py-2 px-3 text-gray-900 hover:text-gray-700 no-underline">Publications</a></li>
     <li class="pr-2"><a href="#"
         class="inline-block py-2 px-3 text-gray-900 hover:text-gray-700 no-underline">Contact me</a></li>
     
@@ -26,8 +26,8 @@
   <div class="container m-auto flex flex-col md:flex-row max-w-xl">
     <div class="flex flex-col w-full lg:w-1/2 justify-center items-start py-8">
       <label for="tagline" class="uppercase tracking-loose">Yasuhiro Iuchi</label>
-      <h1 class="my-4 font-normal">My Engineer Blog</h1>
-      <p class="leading-normal mb-4">test</p>
+      <h1 class="my-4 font-normal">My Blog</h1>
+      <p class="leading-normal mb-4"></p>
       
     </div>
     <div class="w-full lg:w-1/2 lg:py-6"><img src="https://yasu-kun.github.io/images/img1.JPG" alt="image"
