remove hatena url

--- a/publications.html
+++ b/publications.html
@@ -52,7 +52,7 @@
             class="fab fa-github-alt"></i></a>
         <a class="block flex items-center text-gray-900 hover:text-black mr-6 no-underline" href="https://www.instagram.com/yasu_kun_7"><i
             class="fab fa-instagram"></i></a>
-        <a class="block flex items-center text-gray-900 hover:text-black mr-6 no-underline" href="https://yasu-kun-ana.hatenablog.com/">
+        <a class="block flex items-center text-gray-900 hover:text-black mr-6 no-underline" >
               <i class="fas fa-pen-nib"></i></a>
         <a class="block flex items-center text-gray-900 hover:text-black no-underline" href="https://twitter.com/go_new_innov"><i
             class="fab fa-twitter"></i></a>
