update and add aboutme

--- a/aboutme.html
+++ b/aboutme.html
@@ -15,22 +15,29 @@
     <img src="./images/logo.png" class="h-10 sm:h-10 rounded-full" alt="logo">
   </a>
   <ul class="text-sm text-gray-700 list-none p-0 flex items-center">
-    <li><a href="#" class="inline-block py-2 px-3 text-gray-900 hover:text-gray-700 no-underline">HOME</a></li>
+    <li><a href="/" class="inline-block py-2 px-3 text-gray-900 hover:text-gray-700 no-underline">HOME</a></li>
     <li><a href="#" class="inline-block py-2 px-3 text-gray-900 hover:text-gray-700 no-underline">About Me</a></li>
-    <li><a href="#" class="inline-block py-2 px-3 text-gray-900 hover:text-gray-700 no-underline">Publications</a></li>
-    <li class="pr-2"><a href="#"
+    <li><a href="publications.html" class="inline-block py-2 px-3 text-gray-900 hover:text-gray-700 no-underline">Publications</a></li>
+    <li class="pr-2"><a href="contactme.html"
         class="inline-block py-2 px-3 text-gray-900 hover:text-gray-700 no-underline">Contact me</a></li>
     
 
   </ul>
 </nav>
 <section class="font-sans container m-auto flex flex-col py-8 max-w-xl text-center px-6">
-  <label class="text-sm uppercase">Updated on June 20 2020</label>
-  <h1 class="my-8 max-w-full m-auto text-3xl md:text-4xl lg:text-5xl font-medium">Publications</h1>
-  <ol>
-    <li>原 隆宣, 上田 郁夫, 井内 康裕: Belle II RAWデータ管理1 オンライン-オフライン間データコピー, 日本物理学会,素粒子実験領域（コンピューティング・ネットワーク・ソフトウェア技術）(2019-03-15)</li>
-    <li>井内 康裕 , 深澤 佑介 , 上原 宏 , 金田 吉弘: あきたこまち栽培記録に基づくイネの出穂日予測, 研究報告モバイルコンピューティングとパーベイシブシステム（MBL）,2019-MBL-91(20),1-2 (2019-05-16)</li>
-    <li>Yasuhiro Iuchi, Hiroshi Uehara, Yusuke Fukazawa, Yoshihiro Kaneta: Stabilizing Predictive Performance for Ear Emergence in Rice Crops across Cropping Regions, PKAW 2020</li>
+  <label class="text-sm uppercase">Updated on Jun 28 2021</label>
+  <h1 class="my-8 max-w-full m-auto text-3xl md:text-4xl lg:text-5xl font-medium">About Me</h1>
+  <ol style="text-align:left">
+    <b>経歴</b><br>
+    　2021年3月 秋田県立大学　システム科学技術学部　経営システム工学科　卒業<br>
+    　2021年4月より 秋田県立大学　システム科学技術研究科　経営システム工学専攻　在学中<br>
+    　　　　　　　　サイバーフィジカルシステム研究室　所属<br>
+    <br>
+    <b>研究分野</b><br>
+    　機械学習，IoT，エッジコンピューティング<br>
+    <br>
+    <b>趣味</b><br>
+    　コーヒー，旅行，キャンプ，ドライブ，デバイスいじり<br>
   </ol>
   </section>
 
@@ -43,7 +50,7 @@
     </a>
     <div class="w-full text-gray-900 mt-6 md:mt-0 leading-normal">
       <h4 class="py-2 uppercase font-bold tracking-wide">About ME</h4>
-      <p>About this pages.</p>
+      <p></p>
     </div>
     <div class="text-gray-700 flex flex-col items-center w-full md:w-1/4 mt-6 md:mt-0">
       <h4 class="inline-block py-2 px-3 uppercase font-bold tracking-wide text-gray-900">Follow ME</h4>
@@ -60,7 +67,7 @@
       </div>
     </div>
   </div>
-  <div class="pt-4 mt-4 text-gray-700 text-xs border-t border-gray-300 text-center"> ©2020 yasuhiro. All rights
+  <div class="pt-4 mt-4 text-gray-700 text-xs border-t border-gray-300 text-center"> ©2021 yasuhiro. All rights
     reserved.</div>
 </footer></body>
 </html>
