--- a/aboutme.html
+++ b/aboutme.html
@@ -16,7 +16,7 @@
   </a>
   <ul class="text-sm text-gray-700 list-none p-0 flex items-center">
     <li><a href="/" class="inline-block py-2 px-3 text-gray-900 hover:text-gray-700 no-underline">HOME</a></li>
-    <li><a href="#" class="inline-block py-2 px-3 text-gray-900 hover:text-gray-700 no-underline">About Me</a></li>
+    <li><a href="aboutme.html" class="inline-block py-2 px-3 text-gray-900 hover:text-gray-700 no-underline">About Me</a></li>
     <li><a href="publications.html" class="inline-block py-2 px-3 text-gray-900 hover:text-gray-700 no-underline">Publications</a></li>
     <li class="pr-2"><a href="contactme.html"
         class="inline-block py-2 px-3 text-gray-900 hover:text-gray-700 no-underline">Contact me</a></li>
