--- a/publications.html
+++ b/publications.html
@@ -15,10 +15,10 @@
     <img src="./images/logo.png" class="h-10 sm:h-10 rounded-full" alt="logo">
   </a>
   <ul class="text-sm text-gray-700 list-none p-0 flex items-center">
-    <li><a href="#" class="inline-block py-2 px-3 text-gray-900 hover:text-gray-700 no-underline">HOME</a></li>
-    <li><a href="#" class="inline-block py-2 px-3 text-gray-900 hover:text-gray-700 no-underline">About Me</a></li>
-    <li><a href="#" class="inline-block py-2 px-3 text-gray-900 hover:text-gray-700 no-underline">Publications</a></li>
-    <li class="pr-2"><a href="#"
+    <li><a href="/" class="inline-block py-2 px-3 text-gray-900 hover:text-gray-700 no-underline">HOME</a></li>
+    <li><a href="aboutme.html" class="inline-block py-2 px-3 text-gray-900 hover:text-gray-700 no-underline">About Me</a></li>
+    <li><a href="publications.html" class="inline-block py-2 px-3 text-gray-900 hover:text-gray-700 no-underline">Publications</a></li>
+    <li class="pr-2"><a href="contactme.html"
         class="inline-block py-2 px-3 text-gray-900 hover:text-gray-700 no-underline">Contact me</a></li>
     
 
@@ -43,7 +43,7 @@
     </a>
     <div class="w-full text-gray-900 mt-6 md:mt-0 leading-normal">
       <h4 class="py-2 uppercase font-bold tracking-wide">About ME</h4>
-      <p>About this pages.</p>
+      <p></p>
     </div>
     <div class="text-gray-700 flex flex-col items-center w-full md:w-1/4 mt-6 md:mt-0">
       <h4 class="inline-block py-2 px-3 uppercase font-bold tracking-wide text-gray-900">Follow ME</h4>
@@ -60,7 +60,7 @@
       </div>
     </div>
   </div>
-  <div class="pt-4 mt-4 text-gray-700 text-xs border-t border-gray-300 text-center"> ©2020 yasuhiro. All rights
+  <div class="pt-4 mt-4 text-gray-700 text-xs border-t border-gray-300 text-center"> ©2021 yasuhiro. All rights
     reserved.</div>
 </footer></body>
 </html>
